feat: add analytics page with credit and rating graph

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-image: url('./images/background.svg');
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 code {
